# Trifecta-Driver

./: .gitignore  CMakeLists.txt  FS_Trifecta.h  README.md  TrifectaStm32.mk  build_android.sh  build_linux.sh  build_windows_mingw.sh  build_windows_msvc.bat  idf_component.yml
.github/: ci-cd-esp-idf.yml  ci-cd-linux.yml
.github/workflows/: build_android.yml  build_esp-idf.yml  build_linux.yml  build_windows.yml  ci-cd-esp-idf.yml  execute_tests.yml  static_analyzer.yml
android/: FS_Trifecta_Interfaces.c  FS_Trifecta_Interfaces_Networked.c  FS_Trifecta_Interfaces_Serial.c  FS_Trifecta_JNI_Packet_Unpack.c
cmake/: platform_android.cmake  platform_espidf.cmake  platform_linux.cmake  platform_stm32.cmake  platform_windows.cmake  toolchain_mingw.cmake
common/: FS_Trifecta.c  FS_Trifecta_Device.c  FS_Trifecta_Device_Utils.c  FS_Trifecta_Networked.c  FS_Trifecta_Packet_Utils.c  FS_Trifecta_Replay.c  FS_Trifecta_Saver.c  FS_Trifecta_Serial.c
esp-idf/: FS_Trifecta_Interfaces.c  FS_Trifecta_Interfaces_Networked.c  FS_Trifecta_Interfaces_Serial.c
examples/: README.md  example_uart.c  example_usb.c
include/: FS_Trifecta_Defs.h  FS_Trifecta_Defs_Communication.h  FS_Trifecta_Defs_Initializers.h  FS_Trifecta_Defs_Mutex.h  FS_Trifecta_Defs_Packets.h  FS_Trifecta_Defs_Platform_Types.h  FS_Trifecta_Defs_Ringbuffer.h  FS_Trifecta_Device.h  FS_Trifecta_Device_Utils.h  FS_Trifecta_Interfaces.h  FS_Trifecta_Networked.h  FS_Trifecta_Replay.h  FS_Trifecta_Saver.h  FS_Trifecta_Serial.h
java/: Trifecta_API.java  Trifecta_Defs.java  Trifecta_Device.java
linux/: FS_Trifecta_Interfaces.c  FS_Trifecta_Interfaces_Networked.c  FS_Trifecta_Interfaces_Serial.c
stm32/: FS_Trifecta_Interfaces.c  arm-gcc-toolchain.cmake
stm32/F4/: FS_Trifecta_Interfaces_F4.c
tests/: CMakeLists.txt  test_parse_base64.c  test_parse_binary.c  test_parse_binary_serial.c  test_parse_commands.c  test_replay.c  test_replay_long_file.c
tests/test_resources/: NEW_FORMAT.csv  OLD_FORMAT.csv
windows/: FS_Trifecta_Interfaces.c  FS_Trifecta_Interfaces_Networked.c  FS_Trifecta_Interfaces_Serial.c
